# claude-skills

./: .gitignore  README.md  install.sh
.github/workflows/: hathifiles.yml  hathitrust-lookup.yml  mint-gh-token.yml
skills/debug-remote-pipeline/: SKILL.md
skills/dtcat/: SKILL.md
skills/dtdiff/: SKILL.md
skills/dtfilter/: SKILL.md
skills/esync-setup/: SKILL.md
skills/hathifiles/: SKILL.md  flake.nix
skills/hathifiles/src/: dune  dune-project  hathifiles.ml
skills/hathifiles/test/: run_test.sh  stub_server.py
skills/hathitrust-lookup/: SKILL.md  flake.nix
skills/hathitrust-lookup/src/: dune  dune-project  ht_lookup.ml
skills/hathitrust-lookup/test/: run_test.sh  stub_server.py
skills/julia-release/: SKILL.md
skills/mint-gh-token/: SKILL.md  flake.nix
skills/mint-gh-token/src/: dune  dune-project  mint_gh_token.ml
skills/mint-gh-token/test/: run_test.sh  stub_server.py
skills/nclq/: SKILL.md
skills/pr-walkthrough/: SKILL.md  render-walkthrough.sh  walkthrough-template.md
skills/rendering-spec-docs/: SKILL.md  render-doc.sh  review.css
skills/wrds-download/: README.md  SKILL.md
skills/wrds-download-py/: README.md  SKILL.md
skills/xlcat/: SKILL.md
skills/xldiff/: SKILL.md
skills/xlfilter/: SKILL.md
skills/xlset/: SKILL.md
