(executable
 (name mint_gh_token)
 (libraries unix x509 base64 yojson ptime mirage-crypto-rng.unix))

; `dune build --profile static` (used by CI on Alpine/musl) produces a fully
; static binary that runs on any Linux, including NixOS microVM guests.
(env
 (static
  (link_flags (-ccopt -static -ccopt -s))))
